--- a/frontend/lib/templates/baseHTML.twig
+++ b/frontend/lib/templates/baseHTML.twig
@@ -34,8 +34,7 @@
                         <input required type="password" class="form-control" id="input.Password" placeholder="Password">
                     </div>
                     <div class="form-group">
-                        <input type="submit" class="btn-select form-control btn-success" id="input.Password"
-                               value="Submit">
+                        <input type="submit" class="btn-select form-control btn-select" id="input.Password" value="Login">
                     </div>
                     <div class="text-right">
                         <a href="#">
@@ -66,11 +65,11 @@
         crossorigin="anonymous"></script>
 <script>
     $(".btn").click((e) => {
-        const className = e.target.className === "btn btn-success lol" ? "btn btn-clicked lol" : "btn btn-success lol";
+        const className = e.target.className === "btn btn-select lol" ? "btn btn-clicked lol" : "btn btn-select lol";
         const buttons = $(".lol");
         for (let key in buttons) {
             if (buttons.hasOwnProperty(key)) {
-                buttons[key].className = "btn btn-success lol";
+                buttons[key].className = "btn btn-select lol";
             }
         }
         if (Object.values(buttons).indexOf(e.target) > -1) {
